@@ -50,6 +50,11 @@ RELEASE 0.XX - XXX
     return immediately.  Add a "stop=" keyword argument that can be set
     to False to preserve the old behavior.
 
+  From Carsten Koch:
+
+  - Avoid race conditions with same-named files and directory creation
+    when pushing copies of files to CacheDir().
+
   From Gary Oberbrunner:
 
   - Add support for the Intel C compiler on Windows64.
